# MaxCutQuantum

./: pyproject.toml
CirQ/: pyproject.toml
Classical/: Classical.ipynb
Utils/: classical_Solver.py  graph.ipynb  graph_tools.py  qaoaCUDAQ.py
cudaQ/: .readMe  03_graph_partition (1).ipynb  MaxcutCUDAQ.ipynb  README.md
openqaoa/: MaxcutOpenQAOA.ipynb  pyproject.toml
pennylane/: Maxcut.ipynb  pyproject.toml
