[tool.poetry]
name = "OpenqaoaPoetry"
version = "0.1.0"
description = ""
authors = ["Thanakrit_B <thanakirt47@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
openqaoa-core = "^0.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
